--- a/progs/libmisc/Makefile.am
+++ b/progs/libmisc/Makefile.am
@@ -1,5 +1,6 @@
 noinst_LTLIBRARIES	= libmisc.la
-libmisc_la_SOURCES	= misc.c profile.c exception.c gauge.c ui.c
+libmisc_la_SOURCES	= misc.c profile.c exception.c gauge.c ui.c 
+			  mpressure.c
 
 libmisc_la_LIBADD 	= $(top_builddir)/libaux/libaux-static.la \
 			  $(top_builddir)/libaal/libaal.la $(PROGS_LIBS)
