--- a/include/aal/Makefile.am
+++ b/include/aal/Makefile.am
@@ -1,4 +1,4 @@
 aalincludedir		= $(includedir)/aal
 aalinclude_HEADERS   	= aal.h device.h file.h exception.h list.h malloc.h \
 			  print.h string.h math.h endian.h debug.h bitops.h \
-                          gauge.h block.h ui.h stream.h lru.h
+                          gauge.h block.h ui.h stream.h lru.h types.h
