--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@ AH_TEMPLATE([VERSION], [Define to the version of the package.])
 AH_TEMPLATE([LIBREISER4_MAX_INTERFACE_VERSION], [])
 AH_TEMPLATE([LIBREISER4_MIN_INTERFACE_VERSION], [])
 AH_TEMPLATE([loff_t], [])
-AH_TEMPLATE([ENABLE_COMPACT], [])
+AH_TEMPLATE([ENABLE_ALONE], [])
 AH_TEMPLATE([ENABLE_MONOLITHIC], [])
 AH_TEMPLATE([ENABLE_DEBUG], [])
 AH_TEMPLATE([HAVE_LIBUUID], [])
@@ -17,7 +17,7 @@ AH_TEMPLATE([HAVE_LIBREADLINE], [])
 
 LIBREISER4_MAJOR_VERSION=0
 LIBREISER4_MINOR_VERSION=3
-LIBREISER4_MICRO_VERSION=3
+LIBREISER4_MICRO_VERSION=4
 
 LIBREISER4_INTERFACE_AGE=0
 LIBREISER4_BINARY_AGE=0
@@ -109,13 +109,13 @@ AC_SUBST(PROGS_LIBS)
 
 AM_ENABLE_SHARED
 
-AC_ARG_ENABLE(compact,
-    [  --enable-compact        build in compact maner (without libc) [default=no]], ,
-        enable_compact=no
+AC_ARG_ENABLE(alone,
+    [  --enable-alone          build in alone maner (without libc) [default=no]], ,
+        enable_alone=no
 )
-if test x$enable_compact = xyes; then
+if test x$enable_alone = xyes; then
     enable_debug=no;
-    AC_DEFINE(ENABLE_COMPACT)
+    AC_DEFINE(ENABLE_ALONE)
 fi
 
 AC_ARG_ENABLE(monolithic,
@@ -146,9 +146,9 @@ fi
 plugindir=$with_plugin_dir
 AC_SUBST(plugindir)
 
-dnl make libc threadsafe (not required for us, but useful other users of
+dnl make libc threadsafe (not required for us for awhile, but useful other users of
 dnl libreiser4)
-if test x$enable_compact = xno; then
+if test x$enable_alone = xno; then
     CFLAGS="$CFLAGS -D_REENTRANT"
 fi
 
@@ -225,7 +225,7 @@ AC_CHECK_FUNCS([statfs getmntent hasmntopt memset strerror strtol])
 
 dnl Check for libdl, if we are doing dynamic loading
 LIBREISER4_LIBS=""
-if test x$enable_compact = xno && test x$enable_monolithic = xno; then
+if test x$enable_alone = xno && test x$enable_monolithic = xno; then
     OLD_LIBS="$LIBS"
     LIBS=""
     AC_CHECK_LIB(dl, dlopen, ,
@@ -241,7 +241,7 @@ if test x$enable_debug = xyes; then
     CFLAGS="$CFLAGS -g"
 fi
 
-if test x$enable_compact = xyes; then
+if test x$enable_alone = xyes; then
     CFLAGS="$CFLAGS -O9 -fno-builtin"
 fi
 
@@ -262,7 +262,7 @@ AC_SUBST(PLUGIN_LDFLAGS)
 
 AC_SUBST(PROGS_LDFLAGS)
 
-AM_CONDITIONAL(ENABLE_COMPACT, test x$enable_compact = xyes)
+AM_CONDITIONAL(ENABLE_ALONE, test x$enable_alone = xyes)
 
 AC_OUTPUT([
     Makefile
