A lot of changes related to ALONE mode. By now, alone library is bulding together with normal ones if --enable-alone specified
(Logical change 1.2933)

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,4 @@
-if ENABLE_COMPACT
+if ENABLE_ALONE
 SUBDIRS         = libaal libaux plugin libreiser4 include doc debug
 else
 SUBDIRS         = libaal libaux plugin libreiser4 librepair progs demos include doc debug
