--- a/demos/Makefile.am
+++ b/demos/Makefile.am
@@ -1,6 +1,25 @@
-ifndef ENABLE_ALONE
-
 noinst_PROGRAMS = list ls cat plugin
+INCLUDES	= -I$(top_srcdir)/include -I$(top_srcdir)/progs/include
+
+if ENABLE_ALONE
+
+list_SOURCES	= 
+list_LDFLAGS	= 
+list_LDADD 	= 
+
+ls_SOURCES	=
+ls_LDFLAGS	= 
+ls_LDADD 	= 
+
+cat_SOURCES	=
+cat_LDFLAGS	=
+cat_LDADD 	=
+
+plugin_SOURCES	=
+plugin_LDFLAGS	=
+plugin_LDADD 	=
+
+else
 
 list_SOURCES	= list.c
 
@@ -33,6 +52,4 @@ plugin_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 	          $(top_builddir)/progs/libmisc/libmisc.la \
 		  $(PROGS_LIBS)
 
-INCLUDES	= -I$(top_srcdir)/include -I$(top_srcdir)/progs/include
-
-#endif
+endif
