--- a/libaal/Makefile.am
+++ b/libaal/Makefile.am
@@ -4,8 +4,14 @@ libaal_sources  	 = device.c file.c exception.c list.c malloc.c \
 			   print.c string.c math.c debug.c bitops.c \
 			   gauge.c block.c ui.c stream.c lru.c
 
-lib_LTLIBRARIES		 = libaal.la
-noinst_LTLIBRARIES	 = libaal-static.la
+if ENABLE_ALONE
+ALONE_LIBS               = libaal-alone.la 
+else
+ALONE_LIBS               = 
+endif
+
+lib_LTLIBRARIES		 = libaal.la $(ALONE_LIBS)
+noinst_LTLIBRARIES	 = libaal-static.la 
 
 libaal_la_LDFLAGS 	 = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 			   -release $(LT_RELEASE)
@@ -13,6 +19,13 @@ libaal_la_LDFLAGS 	 = -version-info $(LT_CURRENT):$(LT_REVISION):$(LT_AGE) \
 libaal_la_SOURCES  	 = $(libaal_sources)
 
 libaal_static_la_SOURCES = $(libaal_sources)
+
+if ENABLE_ALONE
+
+libaal_alone_la_SOURCES   = $(libaal_sources)
+libaal_alone_la_CFLAGS    = -DENABLE_ALONE -O9 -fno-builtin
+
+endif
 
 INCLUDES = $(includedir)
 
