--- a/configure.in
+++ b/configure.in
@@ -110,26 +110,17 @@ AC_SUBST(PROGS_LIBS)
 AM_ENABLE_SHARED
 
 AC_ARG_ENABLE(alone,
-    [  --enable-alone          build in alone maner (without libc) [default=no]], ,
+    [  --enable-alone          build in alone library [default=no]], ,
         enable_alone=no
 )
 if test x$enable_alone = xyes; then
     enable_debug=no;
-    AC_DEFINE(ENABLE_ALONE)
 fi
 
 AC_ARG_ENABLE(monolithic,
     [  --enable-monolithic     build in monolithic maner (with builtin plugins) [default=yes]], ,
         enable_monolithic=yes
 )
-
-if test x$enable_monolithic = xyes; then
-    AC_DEFINE(ENABLE_MONOLITHIC)
-fi
-
-if test x$enable_debug = xyes; then
-    AC_DEFINE(ENABLE_DEBUG)
-fi
 
 AC_ARG_ENABLE(Werror,
     [  --enable-Werror         build with gcc -Werror [default=yes]], ,
@@ -148,9 +139,9 @@ AC_SUBST(plugindir)
 
 dnl make libc threadsafe (not required for us for awhile, but useful other users of
 dnl libreiser4)
-if test x$enable_alone = xno; then
-    CFLAGS="$CFLAGS -D_REENTRANT"
-fi
+dnl if test x$enable_alone = xno; then
+dnl     CFLAGS="$CFLAGS -D_REENTRANT"
+dnl fi
 
 # Checks for programs.
 AC_PROG_CC
@@ -225,7 +216,7 @@ AC_CHECK_FUNCS([statfs getmntent hasmntopt memset strerror strtol])
 
 dnl Check for libdl, if we are doing dynamic loading
 LIBREISER4_LIBS=""
-if test x$enable_alone = xno && test x$enable_monolithic = xno; then
+if test x$enable_monolithic = xno; then
     OLD_LIBS="$LIBS"
     LIBS=""
     AC_CHECK_LIB(dl, dlopen, ,
@@ -241,9 +232,9 @@ if test x$enable_debug = xyes; then
     CFLAGS="$CFLAGS -g"
 fi
 
-if test x$enable_alone = xyes; then
-    CFLAGS="$CFLAGS -O9 -fno-builtin"
-fi
+dnl if test x$enable_alone = xyes; then
+dnl     CFLAGS="$CFLAGS -O9 -fno-builtin"
+dnl fi
 
 CFLAGS="$CFLAGS -W -Wall -Wno-unused"
 if test x$enable_Werror = xyes; then
@@ -254,6 +245,10 @@ CFLAGS="$CFLAGS -DPLUGIN_DIR=\\\"$with_plugin_dir\\\""
 
 AM_CONDITIONAL(ENABLE_MONOLITHIC, test x$enable_monolithic = xyes)
 
+if test x$enable_monolithic = xyes; then
+    AC_DEFINE(ENABLE_MONOLITHIC)
+fi
+
 PLUGIN_LDFLAGS=""
 if test x$enable_monolithic = xno; then
     PLUGIN_LDFLAGS="-module -avoid-version"
@@ -263,6 +258,16 @@ AC_SUBST(PLUGIN_LDFLAGS)
 AC_SUBST(PROGS_LDFLAGS)
 
 AM_CONDITIONAL(ENABLE_ALONE, test x$enable_alone = xyes)
+
+if test x$enable_alone = xyes; then
+    AC_DEFINE(ENABLE_ALONE)
+fi
+
+AM_CONDITIONAL(ENABLE_DEBUG, test x$enable_debug = xyes)
+
+if test x$enable_debug = xyes; then
+    AC_DEFINE(ENABLE_DEBUG)
+fi
 
 AC_OUTPUT([
     Makefile
