--- a/plugin/file/dir40/Makefile.am
+++ b/plugin/file/dir40/Makefile.am
@@ -4,17 +4,32 @@ libdir			    = $(plugindir)
 dir40_sources		    = dir40.c dir40.h
 
 if ENABLE_MONOLITHIC
-noinst_LTLIBRARIES	    = libdir40-static.la
+STATIC_LIBS                 = libdir40-static.la
 libdir40_static_la_SOURCES  = $(dir40_sources)
+libdir40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
 else
+STATIC_LIBS                 =
 lib_LTLIBRARIES		    = libdir40.la
 libdir40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
-	     		      $(top_builddir)/plugin/file/file40/libfile40-static.la
+			      $(top_builddir)/plugin/file/file40/libfile40-static.la
 libdir40_la_SOURCES	    = $(dir40_sources)
-endif
-
-libdir40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
 libdir40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
 
-INCLUDES = $(includedir)
+endif
 
+if ENABLE_ALONE
+ALONE_LIBS                   = libdir40-alone.la
+else
+ALONE_LIBS                   =
+endif
+
+noinst_LTLIBRARIES	     = $(STATIC_LIBS) $(ALONE_LIBS)
+
+if ENABLE_ALONE
+
+libdir40_alone_la_SOURCES  = $(dir40_sources)
+libdir40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+
+endif
+
+INCLUDES = $(includedir)
