Added control flags to tree_expand. Added debugfs.h
(Logical change 1.2943)

--- a/progs/debugfs/Makefile.am
+++ b/progs/debugfs/Makefile.am
@@ -1,5 +1,5 @@
 sbin_PROGRAMS 		= debugfs.reiser4
-debugfs_reiser4_SOURCES	= debugfs.c
+debugfs_reiser4_SOURCES	= debugfs.c debugfs.h
 
 debugfs_reiser4_LDADD 	= $(top_builddir)/libreiser4/libreiser4.la \
 			  $(top_builddir)/progs/libmisc/libmisc.la \
