--- a/include/reiser4/Makefile.am
+++ b/include/reiser4/Makefile.am
@@ -1,6 +1,6 @@
 reiser4includedir		= $(includedir)/reiser4
 reiser4include_HEADERS		= reiser4.h filesystem.h format.h journal.h file.h alloc.h \
-				  oid.h tree.h plugin.h node.h key.h coord.h master.h item.h \
+				  oid.h tree.h plugin.h node.h key.h place.h master.h item.h \
 				  factory.h types.h
 
 noinst_HEADERS	      		= 
