--- a/config.h.in
+++ b/config.h.in
@@ -109,6 +109,9 @@
 /* Define if you have the <sys/vfs.h> header file. */
 #undef HAVE_SYS_VFS_H
 
+/* Define if you have the `time' function. */
+#undef HAVE_TIME
+
 /* Define if you have the <unistd.h> header file. */
 #undef HAVE_UNISTD_H
 
