--- a/plugin/format/format40/Makefile.am
+++ b/plugin/format/format40/Makefile.am
@@ -6,7 +6,8 @@ format40_sources		= format40.c format40_repair.c format40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libformat40-static.la
 libformat40_static_la_SOURCES	= $(format40_sources)
-libformat40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libformat40_static_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libformat40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libformat40.la
@@ -14,7 +15,8 @@ libformat40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libformat40_la_SOURCES		= $(format40_sources)
-libformat40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
+libformat40_la_LDFLAGS		= @PLUGIN_LDFLAGS@
+libformat40_la_CFLAGS	        = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES	        = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libformat40_alone_la_SOURCES    = $(format40_sources)
-libformat40_alone_la_CFLAGS     = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libformat40_alone_la_CFLAGS     = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
