--- a/plugin/node/node40/Makefile.am
+++ b/plugin/node/node40/Makefile.am
@@ -6,7 +6,8 @@ node40_sources              = node40.c node40_repair.c node40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS		    = libnode40-static.la
 libnode40_static_la_SOURCES = $(node40_sources)
-libnode40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libnode40_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+libnode40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS		    =
 lib_LTLIBRARIES		    = libnode40.la
@@ -14,7 +15,8 @@ libnode40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 			      $(top_builddir)/libaux/libaux-static.la
 
 libnode40_la_SOURCES	    = $(node40_sources)
-libnode40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
+libnode40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
+libnode40_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES   	    = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libnode40_alone_la_SOURCES  = $(node40_sources)
-libnode40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libnode40_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
