--- a/plugin/object/dir40/Makefile.am
+++ b/plugin/object/dir40/Makefile.am
@@ -6,15 +6,16 @@ dir40_sources		    = dir40.c dir40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                 = libdir40-static.la
 libdir40_static_la_SOURCES  = $(dir40_sources)
-libdir40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
+libdir40_static_la_LDFLAGS  = @PLUGIN_LDFLAGS@
+libdir40_static_la_CFLAGS   = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                 =
 lib_LTLIBRARIES		    = libdir40.la
 libdir40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 			      $(top_builddir)/plugin/object/object40/libobject40-static.la
 libdir40_la_SOURCES	    = $(dir40_sources)
-libdir40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
-
+libdir40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
+libdir40_la_CFLAGS          = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,8 +28,8 @@ noinst_LTLIBRARIES	     = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 
-libdir40_alone_la_SOURCES  = $(dir40_sources)
-libdir40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libdir40_alone_la_SOURCES    = $(dir40_sources)
+libdir40_alone_la_CFLAGS     = @ALONE_CFLAGS@
 
 endif
 
