--- a/plugin/oid/oid40/Makefile.am
+++ b/plugin/oid/oid40/Makefile.am
@@ -6,7 +6,8 @@ oid40_sources		    = oid40.c oid40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS		    = liboid40-static.la
 liboid40_static_la_SOURCES  = $(oid40_sources)
-liboid40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
+liboid40_static_la_LDFLAGS  = @PLUGIN_LDFLAGS@
+liboid40_static_la_CFLAGS   = @GENERIC_CFLAGS@
 else
 STATIC_LIBS		    =
 lib_LTLIBRARIES		    = liboid40.la
@@ -14,7 +15,8 @@ liboid40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 	  		      $(top_builddir)/libaux/libaux-static.la
 
 liboid40_la_SOURCES	    = $(oid40_sources)
-liboid40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
+liboid40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
+liboid40_la_CFLAGS          = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES   	    = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 liboid40_alone_la_SOURCES   = $(oid40_sources)
-liboid40_alone_la_CFLAGS    = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+liboid40_alone_la_CFLAGS    = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
