--- a/plugin/sdext/sdext_unix/Makefile.am
+++ b/plugin/sdext/sdext_unix/Makefile.am
@@ -6,7 +6,8 @@ sdext_unix_sources		= sdext_unix.c sdext_unix.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libsdext_unix-static.la
 libsdext_unix_static_la_SOURCES = $(sdext_unix_sources)
-libsdext_unix_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libsdext_unix_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+libsdext_unix_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     =
 lib_LTLIBRARIES			= libsdext_unix.la
@@ -14,7 +15,8 @@ libsdext_unix_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libsdext_unix_la_SOURCES	= $(sdext_unix_sources)
-libsdext_unix_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libsdext_unix_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libsdext_unix_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES              = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libsdext_unix_alone_la_SOURCES  = $(sdext_unix_sources)
-libsdext_unix_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libsdext_unix_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
