--- a/plugin/alloc/alloc40/Makefile.am
+++ b/plugin/alloc/alloc40/Makefile.am
@@ -6,7 +6,8 @@ alloc40_sources		     = alloc40.c alloc40_repair.c alloc40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                  = liballoc40-static.la
 liballoc40_static_la_SOURCES = $(alloc40_sources)
-liballoc40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+liballoc40_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+liballoc40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                  =
 lib_LTLIBRARIES		     = liballoc40.la
@@ -14,7 +15,8 @@ liballoc40_la_LIBADD	     = $(top_builddir)/libaal/libaal.la \
 			       $(top_builddir)/libaux/libaux-static.la
 
 liballoc40_la_SOURCES	     = $(alloc40_sources)
-liballoc40_la_LDFLAGS	     = $(PLUGIN_LDFLAGS)
+liballoc40_la_LDFLAGS	     = @PLUGIN_LDFLAGS@
+liballoc40_la_CFLAGS	     = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES	     = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 liballoc40_alone_la_SOURCES  = $(alloc40_sources)
-liballoc40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+liballoc40_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
