--- a/plugin/hash/fnv1_hash/Makefile.am
+++ b/plugin/hash/fnv1_hash/Makefile.am
@@ -6,12 +6,14 @@ fnv1_hash_sources		= fnv1_hash.c
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libfnv1_hash-static.la
 libfnv1_hash_static_la_SOURCES	= $(fnv1_hash_sources)
-libfnv1_hash_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libfnv1_hash_static_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libfnv1_hash_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libfnv1_hash.la
 libfnv1_hash_la_SOURCES		= $(fnv1_hash_sources)
-libfnv1_hash_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
+libfnv1_hash_la_LDFLAGS		= @PLUGIN_LDFLAGS@
+libfnv1_hash_la_CFLAGS	        = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -24,7 +26,7 @@ noinst_LTLIBRARIES		= $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libfnv1_hash_alone_la_SOURCES   = $(fnv1_hash_sources)
-libfnv1_hash_alone_la_CFLAGS    = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libfnv1_hash_alone_la_CFLAGS    = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
