--- a/plugin/hash/rupasov_hash/Makefile.am
+++ b/plugin/hash/rupasov_hash/Makefile.am
@@ -6,12 +6,14 @@ rupasov_hash_sources		  = rupasov_hash.c
 if ENABLE_MONOLITHIC
 STATIC_LIBS                       = librupasov_hash-static.la
 librupasov_hash_static_la_SOURCES = $(rupasov_hash_sources)
-librupasov_hash_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+librupasov_hash_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+librupasov_hash_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                       = 
 lib_LTLIBRARIES			  = librupasov_hash.la
 librupasov_hash_la_SOURCES	  = $(rupasov_hash_sources)
-librupasov_hash_la_LDFLAGS	  = $(PLUGIN_LDFLAGS)
+librupasov_hash_la_LDFLAGS	  = @PLUGIN_LDFLAGS@
+librupasov_hash_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -24,7 +26,7 @@ noinst_LTLIBRARIES		   = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 librupasov_hash_alone_la_SOURCES   = $(rupasov_hash_sources)
-librupasov_hash_alone_la_CFLAGS    = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+librupasov_hash_alone_la_CFLAGS    = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
