--- a/plugin/hash/tea_hash/Makefile.am
+++ b/plugin/hash/tea_hash/Makefile.am
@@ -6,12 +6,14 @@ tea_hash_sources	      = tea_hash.c
 if ENABLE_MONOLITHIC
 STATIC_LIBS	              = libtea_hash-static.la
 libtea_hash_static_la_SOURCES = $(tea_hash_sources)
-libtea_hash_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libtea_hash_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+libtea_hash_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS	              =
 lib_LTLIBRARIES		      = libtea_hash.la
 libtea_hash_la_SOURCES	      = $(tea_hash_sources)
-libtea_hash_la_LDFLAGS	      = $(PLUGIN_LDFLAGS)
+libtea_hash_la_LDFLAGS	      = @PLUGIN_LDFLAGS@
+libtea_hash_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -24,7 +26,7 @@ noinst_LTLIBRARIES	      = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libtea_hash_alone_la_SOURCES  = $(tea_hash_sources)
-libtea_hash_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libtea_hash_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
