--- a/plugin/item/direntry40/Makefile.am
+++ b/plugin/item/direntry40/Makefile.am
@@ -6,7 +6,8 @@ direntry40_sources              = direntry40.c direntry40_repair.c direntry40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libdirentry40-static.la
 libdirentry40_static_la_SOURCES = $(direntry40_sources)
-libdirentry40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libdirentry40_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+libdirentry40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libdirentry40.la
@@ -14,7 +15,8 @@ libdirentry40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libdirentry40_la_SOURCES	= $(direntry40_sources)
-libdirentry40_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libdirentry40_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libdirentry40_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES	        = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libdirentry40_alone_la_SOURCES  = $(direntry40_sources)
-libdirentry40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libdirentry40_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
