--- a/plugin/item/extent40/Makefile.am
+++ b/plugin/item/extent40/Makefile.am
@@ -6,7 +6,8 @@ extent40_sources	      = extent40.c extent40_repair.c extent40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                   = libextent40-static.la
 libextent40_static_la_SOURCES = $(extent40_sources)
-libextent40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libextent40_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+libextent40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                   = 
 lib_LTLIBRARIES		      = libextent40.la
@@ -14,7 +15,8 @@ libextent40_la_LIBADD	      = $(top_builddir)/libaal/libaal.la \
 			        $(top_builddir)/libaux/libaux-static.la
 
 libextent40_la_SOURCES	      = $(extent40_sources)
-libextent40_la_LDFLAGS	      = $(PLUGIN_LDFLAGS)
+libextent40_la_LDFLAGS	      = @PLUGIN_LDFLAGS@
+libextent40_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES	      = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libextent40_alone_la_SOURCES  = $(extent40_sources)
-libextent40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libextent40_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
