--- a/plugin/item/nodeptr40/Makefile.am
+++ b/plugin/item/nodeptr40/Makefile.am
@@ -6,7 +6,8 @@ nodeptr40_sources               = nodeptr40.c nodeptr40_repair.c nodeptr40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libnodeptr40-static.la
 libnodeptr40_static_la_SOURCES	= $(nodeptr40_sources)
-libnodeptr40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libnodeptr40_static_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libnodeptr40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libnodeptr40.la
@@ -14,7 +15,8 @@ libnodeptr40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libnodeptr40_la_SOURCES		= $(nodeptr40_sources)
-libnodeptr40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
+libnodeptr40_la_LDFLAGS		= @PLUGIN_LDFLAGS@
+libnodeptr40_la_CFLAGS          = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES	        = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libnodeptr40_alone_la_SOURCES   = $(nodeptr40_sources)
-libnodeptr40_alone_la_CFLAGS    = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libnodeptr40_alone_la_CFLAGS    = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
