--- a/plugin/item/tail40/Makefile.am
+++ b/plugin/item/tail40/Makefile.am
@@ -6,14 +6,16 @@ tail40_sources		    = tail40.c
 if ENABLE_MONOLITHIC
 STATIC_LIBS                 = libtail40-static.la
 libtail40_static_la_SOURCES = $(tail40_sources)
-libtail40_static_la_LDFLAGS = $(PLUGIN_LDFLAGS)
+libtail40_static_la_LDFLAGS = @PLUGIN_LDFLAGS@
+libtail40_static_la_CFLAGS  = @GENERIC_CFLAGS@
 else
 lib_LTLIBRARIES		    = libtail40.la
 libtail40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 			      $(top_builddir)/libaux/libaux-static.la
 
 libtail40_la_SOURCES	    = $(tail40_sources)
-libtail40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
+libtail40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
+libtail40_la_CFLAGS         = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -26,7 +28,7 @@ noinst_LTLIBRARIES          = $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libtail40_alone_la_SOURCES  = $(tail40_sources)
-libtail40_alone_la_CFLAGS   = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libtail40_alone_la_CFLAGS   = @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
