--- a/plugin/journal/journal40/Makefile.am
+++ b/plugin/journal/journal40/Makefile.am
@@ -6,7 +6,8 @@ journal40_sources		= journal40.c journal40_repair.c journal40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libjournal40-static.la
 libjournal40_static_la_SOURCES	= $(journal40_sources)
-libjournal40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libjournal40_static_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libjournal40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     =
 lib_LTLIBRARIES			= libjournal40.la
@@ -14,7 +15,8 @@ libjournal40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libjournal40_la_SOURCES		= $(journal40_sources)
-libjournal40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
+libjournal40_la_LDFLAGS		= @PLUGIN_LDFLAGS@
+libjournal40_la_CFLAGS          = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES          	= $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libjournal40_alone_la_SOURCES  	= $(journal40_sources)
-libjournal40_alone_la_CFLAGS   	= -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libjournal40_alone_la_CFLAGS   	= @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
