--- a/plugin/key/key40/Makefile.am
+++ b/plugin/key/key40/Makefile.am
@@ -6,7 +6,8 @@ key40_sources                   = key40.c key40_repair.c key40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                     = libkey40-static.la
 libkey40_static_la_SOURCES	= $(key40_sources)
-libkey40_static_la_LDFLAGS	= $(PLUGIN_LDFLAGS)
+libkey40_static_la_LDFLAGS	= @PLUGIN_LDFLAGS@
+libkey40_static_la_CFLAGS	= @GENERIC_CFLAGS@
 else
 STATIC_LIBS                     = 
 lib_LTLIBRARIES			= libkey40.la
@@ -14,7 +15,8 @@ libkey40_la_LIBADD		= $(top_builddir)/libaal/libaal.la \
 				  $(top_builddir)/libaux/libaux-static.la
 
 libkey40_la_SOURCES		= $(key40_sources)
-libkey40_la_LDFLAGS		= $(PLUGIN_LDFLAGS)
+libkey40_la_LDFLAGS		= @PLUGIN_LDFLAGS@
+libkey40_la_CFLAGS              = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -27,7 +29,7 @@ noinst_LTLIBRARIES          	= $(STATIC_LIBS) $(ALONE_LIBS)
 
 if ENABLE_ALONE
 libkey40_alone_la_SOURCES  	= $(key40_sources)
-libkey40_alone_la_CFLAGS   	= -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libkey40_alone_la_CFLAGS   	= @ALONE_CFLAGS@
 endif
 
 INCLUDES = $(includedir)
