--- a/plugin/object/sym40/Makefile.am
+++ b/plugin/object/sym40/Makefile.am
@@ -6,15 +6,16 @@ sym40_sources	            = sym40.c sym40.h
 if ENABLE_MONOLITHIC
 STATIC_LIBS                 = libsym40-static.la
 libsym40_static_la_SOURCES  = $(sym40_sources)
-libsym40_static_la_LDFLAGS  = $(PLUGIN_LDFLAGS)
+libsym40_static_la_LDFLAGS  = @PLUGIN_LDFLAGS@
+libsym40_static_la_CFLAGS   = @GENERIC_CFLAGS@
 else
 STATIC_LIBS                 =
 lib_LTLIBRARIES		    = libsym40.la
 libsym40_la_LIBADD	    = $(top_builddir)/libaal/libaal.la \
 			      $(top_builddir)/plugin/object/object40/libobject40-static.la
 libsym40_la_SOURCES	    = $(sym40_sources)
-libsym40_la_LDFLAGS	    = $(PLUGIN_LDFLAGS)
-
+libsym40_la_LDFLAGS	    = @PLUGIN_LDFLAGS@
+libsym40_la_CFLAGS          = @GENERIC_CFLAGS@
 endif
 
 if ENABLE_ALONE
@@ -28,7 +29,7 @@ noinst_LTLIBRARIES	    = $(STATIC_LIBS) $(ALONE_LIBS)
 if ENABLE_ALONE
 
 libsym40_alone_la_SOURCES   = $(sym40_sources)
-libsym40_alone_la_CFLAGS    = -DENABLE_ALONE -DENABLE_MONOLITHIC -O9 -fno-builtin
+libsym40_alone_la_CFLAGS    = @ALONE_CFLAGS@
 
 endif
 
